# aumlang-interpreter

./: .clang-format  .gitignore  CMakeLists.txt  README.md  file.aum
.github/workflows/: ci.yml  release.yml
include/: cli.h  eval_expr.h  keywords.h  lexer.h  map.h  token.h  utils.h  vector.h
src/: cli.c  eval_expr.c  lexer.c  main.c  map.c  token.c  utils.c  vector.c
test/: test.c
